--- a/files/main.css
+++ b/files/main.css
@@ -199,7 +199,7 @@ input.square:after, .CompareCheckbox:after {content: "\e876";font-family: 'Mater
 /******************************************************************************
   Кнопки
 *******************************************************************************/
-.button, button, .paymentFormSubmitLink, .paymentFormTbodySubmitButton {display: inline-block;position: relative;padding: 0 2rem;line-height: 3rem;color: #fff;background: #b30020;font-size: 0.875rem;font-weight: 400;letter-spacing: 1px;text-transform: none;border-width: 1px;border-style: solid;border-color: transparent;border-radius: 0;box-shadow: none;overflow: visible;text-align: center;margin: 0;outline: 0;cursor: pointer;white-space: nowrap;text-shadow: none;backface-visibility: hidden;transform: translateZ(0);-webkit-appearance: none;-moz-appearance: none;appearance: none;transition: all 0.3s ease;}
+.button, button, .paymentFormSubmitLink, .paymentFormTbodySubmitButton {display: inline-block;position: relative;padding: 0 2rem;line-height: 3rem;color: #fff;background: #b30020;font-size: 0.875rem;font-weight: 400;font-family: 'Montserrat Alternates', sans-serif;letter-spacing: 1px;text-transform: none;border-width: 1px;border-style: solid;border-color: transparent;border-radius: 0;box-shadow: none;overflow: visible;text-align: center;margin: 0;outline: 0;cursor: pointer;white-space: nowrap;text-shadow: none;backface-visibility: hidden;transform: translateZ(0);-webkit-appearance: none;-moz-appearance: none;appearance: none;transition: all 0.3s ease;}
 .paymentFormSubmitLink {padding: 0 1rem;}
 .button:hover, .button.added, button:hover, button.added, .paymentFormSubmitLink:hover, .paymentFormTbodySubmitButton:hover {color: #ffffff;background: #1d8884;box-shadow: none;}
 .button2 {color: #ffffff;background: #1d8884;border-color: #1d8884;}
@@ -256,12 +256,10 @@ input.square:after, .CompareCheckbox:after {content: "\e876";font-family: 'Mater
 .ico__new:before {content: 'Новинка';}
 /*** Цена ****/
 .price__now {font-size: 1rem;font-weight: 400;line-height: 1;white-space: nowrap;color: #b30020;}
-.price__now:after {font-size: 80%;line-height: 1;font-family: "icomoon";font-weight: 300;}
-.price__old {font-size: 0.825rem;font-weight: 400;line-height: 1;white-space: nowrap;text-decoration: line-through;}
-.price__old:after {font-size: 80%;line-height: 1;font-family: "icomoon";font-weight: 300;}
+.price__old {color: #aca7b4;font-size: 0.825rem;font-weight: 400;line-height: 1;white-space: nowrap;text-decoration: line-through;}
 .price__old + .price__now {margin-left: 0.5rem;}
-.RUB .price__now:after, .RUB .price__old:after {content: "Р";}
-.RUB .price__now span + span, .RUB .price__old span + span {display: none;}
+.num:after {content: "Р";font-size: 80%;line-height: 1;font-weight: 300;margin-left: 0.25rem;}
+.num + span {display: none;}
 
 /******************************************************************************
 *******************************************************************************
@@ -676,7 +674,7 @@ footer .contacts {width: 100%;flex-direction: row;}
 .product__img--hover {opacity: 0;display: flex;align-items: center;justify-content: center;position: absolute;top: -100%;left: 0;width: 100%;height: 100%;background-color: #fff;overflow: hidden;transition: all 0.3s ease;}
 .product__image:hover .product__img--hover {opacity: 1;filter: alpha(opacity=100);top: 0;}
 .products__grid .product__shop {text-align: center;}
-.products__grid .product__name {margin: 2rem 0;line-height: 1.5rem;max-height: 3rem;overflow: hidden;}
+.products__grid .product__name {margin: 1rem 0;line-height: 1.5rem;height: 3rem;overflow: hidden;}
 .products__grid .product__links {opacity: 0;display: flex;align-items: center;justify-content: center;margin-top: 2rem;transition: all 0.3s ease;}
 .products__grid .product__item:hover .product__links {opacity: 1;}
 .products__grid .product__links a {font-size: 2rem;margin: 0 0.75rem;}
@@ -1265,9 +1263,11 @@ section {margin: 2rem 0;}
 .CompareGoods__nav .navigation {width: 70px;display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-align: center;-webkit-align-items: center;-webkit-box-align: center;align-items: center;-webkit-justify-content: space-between;justify-content: space-between;}
 .CompareGoods__nav .navigation > div {font-size: 1.5rem;position: relative;float: none;margin: 0;}
 .CompareGoods__nav .navigation > div:hover {border-color: #b30020;}
-.CompareGoods .price__old + .price__now {margin-left: 1rem;}
+.CompareGoods .price__old {margin-right: 1rem;}
+.CompareGoods .price__now {margin: 0;}
 @media all and (max-width: 480px) {
 .CompareGoods__filter .label {display: none;}
+.CompareGoods .price__old {margin-right: 0.5rem;}
 }
 /* Таблицы */
 .CompareGoodsTableTbody {width: 100%;display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;-webkit-justify-content: space-between;justify-content: space-between;}
@@ -1350,6 +1350,9 @@ section {margin: 2rem 0;}
 .total__title {margin-bottom: 1rem;}
 .total__item {margin-bottom: 0.75rem;}
 }
+@media all and (max-width: 480px) {
+.cart__art, .cart__properties {display: none;}
+}
 
 /** Быстрый заказ в Модальном окне **/
 .fastOrder {max-width: 900px;}
@@ -1380,6 +1383,7 @@ section {margin: 2rem 0;}
 .fastOrderForm .total__buttons #closeOrder {margin-bottom: 1rem;}
 .fastOrderForm .total__cart {background: transparent;margin: 0;padding: 0;font-size: 2rem;flex-wrap: wrap;}
 .fastOrderForm .total__pp {text-align: right;padding-right: 2rem;font-size: 13px;}
+.fastOrderForm .total__pp a {text-decoration: underline;}
 @media all and (max-width: 1199px) {
 .fastOrderForm [order] {width: calc(50% - 1rem);margin-top: 2rem;}
 .fastOrderForm [order]:nth-child(-n+2) {margin-top: 0;}
