--- a/files/icomoon.css
+++ b/files/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?x9kldl');
-  src:  url('fonts/icomoon.eot?x9kldl#iefix') format('embedded-opentype'),
-  url('fonts/icomoon.ttf?x9kldl') format('truetype'),
-  url('fonts/icomoon.woff?x9kldl') format('woff'),
-  url('fonts/icomoon.svg?x9kldl#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?qrli6g');
+  src:  url('fonts/icomoon.eot?qrli6g#iefix') format('embedded-opentype'),
+  url('fonts/icomoon.ttf?qrli6g') format('truetype'),
+  url('fonts/icomoon.woff?qrli6g') format('woff'),
+  url('fonts/icomoon.svg?qrli6g#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
