--- a/files/main.css
+++ b/files/main.css
@@ -956,7 +956,9 @@ footer .contacts {width: 100%;flex-direction: row;}
 /* Товар: Табы */
 .productView__tabs {margin-top: 3rem;}
 .tabs__nav {padding: 1rem 0;border-top: 1px solid #e0e0e0;border-bottom: 1px solid #e0e0e0;position: relative;display: flex;flex-wrap: nowrap;align-items: center;justify-content: center;overflow-y: auto;}
-.tabs__nav:after {content: "";display: block;position: absolute;right: 0;height: 100%;width: 2rem;background: rgb(255,255,255,0.8);}
+.tabs__nav::-webkit-scrollbar {width: 0px;height: 5px;}
+.tabs__nav::-webkit-scrollbar-thumb {border-radius: 25px;background-color: #cecece;}
+.tabs__nav::-webkit-scrollbar-track {border-radius: 25px;background-color: #FFFFFF;}
 .tabs__nav .tab {padding: 0.5rem 2rem;font-size: 18px;cursor: pointer;transition: all 0.3s ease;}
 .tabs__nav .tab:last-child {margin-right: 0;}
 .tabs__nav .tab.active, .tabs__nav .tab:hover {background: #b30020;color: #fff;}
@@ -965,6 +967,9 @@ footer .contacts {width: 100%;flex-direction: row;}
 .tabs__content > div {display: none;}
 .tabs__content > .active {display: flex;flex-wrap: wrap;}
 .productView__tabs .htmlDataBlock {overflow: hidden;}
+@media all and (max-width: 767px) {
+.tabs__nav:after {content: "";display: block;position: absolute;right: 0;height: 100%;width: 2rem;background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255) 100%);}
+}
 /* Товар: Характеристики */
 .features__item {display: flex;flex-wrap: wrap;align-items: center;margin-bottom: 1rem;width: 100%;}
 .features__name {width: 150px;}
