--- a/files/main.css
+++ b/files/main.css
@@ -139,8 +139,8 @@ dt, dd {line-height: 1.5;}
 .flex, .inner {display: flex;align-items: center;flex-wrap: wrap;flex-direction: row;justify-content: space-between;}
 .form__pp a {text-decoration: underline;}
 /* Оверлей. Темный фон */
-#overlay {position: fixed;top: 0;left: 0;width: 100%;height: 100%;z-index: 10;opacity: 0;filter: alpha(opacity=0);visibility: hidden;background-color: rgba(0, 0, 0, 0.5);-webkit-transition: opacity .25s ease,visibility 0s ease .25s;transition: opacity .25s ease,visibility 0s ease .25s;}
-#overlay.transparent {background-color: transparent;}
+#overlay {position: fixed;top: 0;left: 0;width: 100%;height: 100%;z-index: 10;opacity: 0;filter: alpha(opacity=0);visibility: hidden;background-color: transparent;-webkit-transition: opacity .25s ease,visibility 0s ease .25s;transition: opacity .25s ease,visibility 0s ease .25s;}
+#overlay.transparent {background-color: rgba(0, 0, 0, 0.5);}
 #overlay.opened {opacity: 1;filter: alpha(opacity=100);visibility: visible;-webkit-transition: opacity .25s ease,visibility 0s ease;transition: opacity .25s ease,visibility 0s ease;cursor: pointer;}
 /* Уведомления */
 .success, .warning, .attention, .information, .help {position: relative;width: 100%;min-height: 40px;margin-bottom: 1.5rem;padding: 1rem 3rem 1rem 1.5rem;text-shadow: none;overflow: hidden;font-size: 1.125rem;line-height: 1.25rem;border: 1px solid transparent;text-transform: none;font-weight: normal;}
@@ -1147,7 +1147,7 @@ footer .contacts {width: 100%;flex-direction: row;}
 
 
 /*** Выпадающее меню ***/
-.dropdown__content {opacity: 0;height: 0;position: absolute;right: 0;width: 360px;background: #fff;border: 1px solid #f1f2f8;overflow: hidden;z-index: 11;transition: all 0.3s ease;margin-top: 19px;}
+.dropdown__content {opacity: 0;height: 0;position: absolute;right: 0;width: 360px;background: #fff;border: 1px solid #f1f2f8;overflow: hidden;z-index: 11;transition: all 0.3s linear;margin-top: 19px;}
 .dropdown__content.opened {opacity: 1;height: auto;}
 .dropdown__open {position: relative;cursor: pointer;}
 .dropdown__angle {opacity: 0;position: absolute;right: 0.75rem;bottom: -1.25rem;width: 0;height: 0;border-bottom: 1.25rem solid #f1f2f8;border-left: 0.75rem solid transparent;border-right: 0.75rem solid transparent;transition: all 0.3s ease;}
