--- a/files/main.css
+++ b/files/main.css
@@ -286,25 +286,47 @@ header .contacts .contacts__block:hover label {color: #b30020;}
 header .contacts .icon {width: 4rem;}
 header .contacts .content {width: calc(100% - 4rem);}
 /** Меню **/
+header .inner {position: relative;}
 header .menu {padding: 0 1rem;}
 header .menu__icon {width: 120px;height: 195px;background-image: url("{ASSETS_IMAGES_PATH}menu.png?design=florist");background-size: cover;background-position: 0 100%;background-repeat: no-repeat;display: flex;align-items: center;justify-content: center;cursor: pointer;}
 header .menu__icon i {font-size: 2.25rem;color: #fff;}
-#menu {display: none;position: fixed;top: 0;left: 220px;width: 100%;z-index: 52;}
-#menu.opened {display: block;}
-#menu .inner {align-items: flex-start;flex-wrap: wrap;}
-#menu .catalog__items {display: none;background: #f1f2f8;padding-left: 1rem;}
-#menu.active .catalog__items {display: block;}
-#menu .catalog__item, #menu .mainnav__item {padding: 0.5rem 0;}
-#menu .catalog__item .sub {display: none;position: absolute;top: 0;margin-left: 200px;padding-left: 1rem;height: 100%;}
-#menu .catalog__item:hover > .sub {display: block;}
-#menu .catalog__item > .sub[data-level="3"] {display: none;}
-#menu .catalog__link, #menu .mainnav__link {display: inline-block;padding: 0.5rem 0;cursor: pointer;transition: all 0.3s ease;}
-#menu .mainnav__link.active, #menu .mainnav__link:hover, #menu .catalog__link.opened, #menu .catalog__link:hover {padding: 0.5rem 0.75rem;background-color: #b30020;color: #fff;}
-#menu .menu__icon {width: 100px;height: 260px;background-image: url("{ASSETS_IMAGES_PATH}menu.png?design=florist");background-size: 100% 100%;background-position: 0 100%;background-repeat: no-repeat;display: flex;align-items: center;justify-content: center;}
-#menu .menu__icon i {font-size: 2rem;color: #fff;padding-left: 1rem;cursor: pointer;}
-#menu .menu__content {width: calc(100% - 100px);padding: 0 2rem;display: flex;flex-wrap: wrap;position: relative;background: #FFFFFF;}
-#menu .mainnav__list {width: 200px;}
-#menu .catalog__link {width: 200px;}
+.menu .menu__content {display: none;position: absolute;top: 0;left: 382px;padding: 0 1rem;width: 100%;background: #FFFFFF;z-index: 52;flex-wrap: wrap;border: 1px solid #e0e0e0;}
+.menu.opened .menu__content {display: flex;}
+.menu .catalog__items {display: none;background: #f1f2f8;padding-left: 1rem;}
+.menu.active .catalog__items {display: block;}
+.menu .catalog__item .sub {display: none;}
+.menu .catalog__item, .menu .mainnav__item {padding: 0.5rem 0;}
+.menu .catalog__link, .menu .mainnav__link {display: inline-block;padding: 0.5rem 2rem 0.5rem 0;cursor: pointer;transition: all 0.3s ease;}
+.menu .mainnav__link.active, .menu .mainnav__link:hover, .menu .catalog__link.opened, .menu .catalog__link:hover {padding: 0.5rem 0.75rem;background-color: #b30020;color: #fff;}
+.menu .menu__catalog a {padding: 0.5rem 0.75rem;background-color: #b30020;color: #fff;}
+.menu .mainnav__list {width: 173px;}
+.menu .catalog__link {width: 173px;}
+@media all and (max-width: 1199px) {
+.menu .catalog__item > .sub[data-level="2"] {display: none;}
+}
+@media all and (min-width: 992px) {
+.menu .catalog__item .sub {position: absolute;top: 0;margin-left: 173px;padding-left: 1rem;height: 100%;}
+.menu .catalog__item:hover > .sub {display: block;}
+.menu .catalog__item .sub[data-level="2"] {background: #f1f2f8;padding-left: 1rem;}
+.menu .catalog__item > .sub[data-level="3"] {display: none;}
+}
+@media all and (max-width: 991px) {
+.menu .menu__content {display: block;opacity: 0;transform: translateX(-100%);transition-duration: 0.6s;position: fixed;top: 0;left: 0;width: 300px;height: 100vh;padding: 0;background: #fff;z-index: 52;border-top: 0;align-items: flex-start;}
+.menu.opened .menu__content {display: block;opacity: 1;transform: none;}
+.menu__content .addto__title {border-bottom: 1px solid #e0e0e0;padding: 0;background: #FFFFFF;display: flex;align-items: center;}
+.menu__content .addto__title > div {width: calc(50% - 25px);height: 56px;display: flex;align-items: center;justify-content: center;flex-grow: 1;font-size: 16px;cursor: pointer;}
+.menu__content .addto__title > div:hover, .menu__content .addto__title > div.active {color: #b30020;}
+.menu__content .addto__title i {margin-right: 0.25rem;}
+.menu__content .addto__title .addto__close {width: 50px;border-left: 1px solid #e0e0e0;transition: all 0.3s ease;cursor: pointer;}
+.menu__content .addto__title .addto__close:hover {color: #b30020;}
+.menu .mainnav__list {width: 100%;padding: 0 1rem;}
+.menu .catalog__link {width: 100%;display: flex;align-items: center;padding-right: 2.25rem;}
+.menu .catalog__items {padding: 1rem;background: #FFFFFF;}
+.menu .catalog__item {position: relative;}
+.menu .catalog__item .open {position: absolute;right: 1rem;}
+.menu .catalog__item .open:after {content: "\e915";font-family: 'icomoon';font-size: 1rem;}
+.menu .catalog__item .sub {padding-left: 1rem;}
+}
 /** Поиск **/
 .search {width: calc(100% - 194px);margin-top: 2rem;position: relative;}
 .search__form {position: relative;display: flex;align-items: center;}
@@ -371,7 +393,7 @@ header .contacts .contacts__block + .contacts__block {margin: 1rem 0 0 0;}
 }
 @media all and (max-width: 991px) {
 header .menu__icon {width: 100px;height: 165px;align-items: flex-start;}
-header .menu__icon i {padding: 2rem 0 0 1rem;}
+header .menu__icon i {padding: 3.5rem 0 0 1rem;}
 header .social__links {margin-top: 1.5rem;}
 header .header__right {width: 100%;margin-top: 2rem;padding: 0;align-items: center;}
 header .header__right .contacts {display: none;}
@@ -1147,11 +1169,13 @@ footer .contacts {width: 100%;flex-direction: row;}
 
 
 /*** Выпадающее меню ***/
-.dropdown__content {opacity: 0;height: 0;position: absolute;right: 0;width: 360px;background: #fff;border: 1px solid #f1f2f8;overflow: hidden;z-index: 11;transition: all 0.3s linear;margin-top: 19px;}
-.dropdown__content.opened {opacity: 1;height: auto;}
+.dropdown__content {position: absolute;top: 200%;right: 0;width: 360px;background: #fff;border: 1px solid #f1f2f8;overflow: hidden;z-index: 11;visibility: hidden;opacity: 0;filter: alpha(opacity=0);-khtml-opacity: 0;-webkit-transform: translate(0, 50px);-moz-transform: translate(0, 50px);-o-transform: translate(0, 50px);transform: translate(0, 50px);-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+.dropdown__content:after {content: "";height: 40px;top: -25px;width: 100%;position: absolute;}
+.dropdown__content.opened, .dropdown:hover .dropdown__content {top: calc(100% + 20px);visibility: visible;opacity: 1;filter: alpha(opacity=100);-khtml-opacity: 1;-webkit-transform: translate(0);-moz-transform: translate(0);-o-transform: translate(0);transform: translate(0);-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
 .dropdown__open {position: relative;cursor: pointer;}
+.dropdown__open:after {content: "";height: 40px;bottom: -25px;width: 100%;position: absolute;}
 .dropdown__angle {opacity: 0;position: absolute;right: 0.75rem;bottom: -1.25rem;width: 0;height: 0;border-bottom: 1.25rem solid #f1f2f8;border-left: 0.75rem solid transparent;border-right: 0.75rem solid transparent;transition: all 0.3s ease;}
-.opened .dropdown__angle {opacity: 1;}
+.opened .dropdown__angle, .dropdown:hover > .dropdown__open .dropdown__angle {opacity: 1;}
 @media all and (max-width: 641px) {
 .dropdown__content {left: 0;right: auto;}
 .cart .dropdown__content {left: auto;right: 0;}
